--- a/dependencies_bom/pom.xml
+++ b/dependencies_bom/pom.xml
@@ -28,6 +28,8 @@
         <postgresql.version>42.7.5</postgresql.version>
         <openfeign.version>4.2.0</openfeign.version>
         <springdoc.version>2.8.5</springdoc.version>
+        <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <lombok.mapstruct.binding>0.2.0</lombok.mapstruct.binding>
     </properties>
 
     <dependencies>
@@ -76,14 +78,14 @@
             <version>${spring.version}</version>
         </dependency>
 
-        <!-- Spring Boot Starter Devtools -->
+<!--        &lt;!&ndash; Spring Boot Starter Devtools &ndash;&gt;
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <version>${spring.version}</version>
             <scope>runtime</scope>
             <optional>true</optional>
-        </dependency>
+        </dependency>-->
 
         <!-- Spring Cloud Starter Open Feign -->
         <dependency>
@@ -97,6 +99,13 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${springdoc.version}</version>
+        </dependency>
+
+        <!-- MapStruct -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
         </dependency>
     </dependencies>
 
@@ -112,6 +121,16 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${mapstruct.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok-mapstruct-binding</artifactId>
+                            <version>${lombok.mapstruct.binding}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
