--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <description>Родительский модуль проекта.</description>
+
     <modules>
         <module>dependencies_bom</module>
         <module>generator</module>
